Makes tags with underscores convert to tags with whitespace. Fixes CSS scroll.

--- a/public/styles/edit_class.css
+++ b/public/styles/edit_class.css
@@ -1,3 +1,7 @@
 #edit-class-form textarea {
     white-space: pre-wrap;
 }
+
+.edit-class {
+    overflow: auto;
+}
